# spell-checker: ignore polonius

[package]
authors = [
  "Joining7943 <joining@posteo.de>",
  "Brook Heisler <redattack34@gmail.com>",
]
categories.workspace = true
description = "Binary package needed by the iai-callgrind library"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "iai-callgrind-runner"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
api = ["dep:serde"]
default = ["runner"]
runner = [
  "api",
  "dep:anyhow",
  "dep:bincode",
  "dep:cargo_metadata",
  "dep:clap",
  "dep:colored",
  "dep:derive_more",
  "dep:env_logger",
  "dep:glob",
  "dep:indexmap",
  "dep:inferno",
  "dep:itertools",
  "dep:lazy_static",
  "dep:log",
  "dep:polonius-the-crab",
  "dep:regex",
  "dep:sanitize-filename",
  "dep:serde",
  "dep:serde_json",
  "dep:serde_regex",
  "dep:shlex",
  "dep:strum",
  "dep:tempfile",
  "dep:version-compare",
  "dep:which",
]
schema = ["default", "dep:schemars"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
cargo_metadata = { workspace = true, optional = true }
clap = { workspace = true, optional = true, features = [
  "derive",
  "env",
  "wrap_help",
] }
colored = { workspace = true, optional = true }
derive_more = { workspace = true, optional = true, features = ["as_ref"] }
env_logger = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true, features = ["serde"] }
inferno = { workspace = true, optional = true, default-features = false, features = [
  'multithreaded',
] }
itertools = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
log = { workspace = true, optional = true }
polonius-the-crab = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
sanitize-filename = { workspace = true, optional = true }
schemars = { workspace = true, optional = true, features = ["indexmap2"] }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_regex = { workspace = true, optional = true }
shlex = { workspace = true, optional = true }
strum = { workspace = true, optional = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
version-compare = { workspace = true, optional = true }
which = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serde_test = { workspace = true }
serde_yaml = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "iai-callgrind-runner"
path = "src/main.rs"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
allow_attributes = "warn"
arbitrary_source_item_ordering = "warn"
assertions_on_result_states = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
create_dir = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
derive_partial_eq_without_eq = "warn"
doc_link_code = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "warn"
else_if_without_else = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "allow"
equatable_if_let = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
fn_to_numeric_cast_any = "warn"
format_collect = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
impl_trait_in_params = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
partial_pub_fields = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "allow"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
too_many_arguments = "allow"
too_many_lines = "allow"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
