[package]
authors = [
  "Joining7943 <joining@posteo.de>",
  "Brook Heisler <redattack34@gmail.com>",
]
categories.workspace = true
description = "High-precision and consistent benchmarking framework/harness for Rust"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "iai-callgrind"
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
benchmark = [
  "iai-callgrind-runner",
  "dep:bincode",
  "dep:iai-callgrind-macros",
  "dep:derive_more",
]
cachegrind = ["iai-callgrind-macros/cachegrind", "client_requests"]
client_requests = ["client_requests_defs"]
client_requests_defs = [
  "dep:cty",
  "dep:cfg-if",
  "dep:bindgen",
  "dep:cc",
  "dep:regex",
  "dep:version-compare",
  "dep:strum",
]
default = ["benchmark"]
ui_tests = []
# Looks like a bug to have to create a feature instead of
# `dep:iai-callgrind-runner` in the benchmark feature directly
iai-callgrind-runner = ["dep:iai-callgrind-runner"]

[build-dependencies]
bindgen = { workspace = true, optional = true }
cc = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
strum = { workspace = true, optional = true, features = ["derive"] }
version-compare = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = ["client_requests_defs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bincode = { workspace = true, optional = true }
cfg-if = { workspace = true, optional = true }
cty = { workspace = true, optional = true }
# We use the `derive_more` crate anyway in `iai-callgrind-macros`, so there's no
# harm in using it for this small AsRef derive macro
derive_more = { workspace = true, default-features = false, features = [
  "as_ref",
], optional = true }
iai-callgrind-macros = { path = "../iai-callgrind-macros", version = "=0.6.1", optional = true }
iai-callgrind-runner = { path = "../iai-callgrind-runner", version = "=0.15.2", default-features = false, features = [
  "api",
], optional = true }

[dev-dependencies]
fs_extra = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
trybuild = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
default_numeric_fallback = "warn"
else_if_without_else = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
mixed_read_write_in_expression = "warn"
partial_pub_fields = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
enum_glob_use = "allow"
module_name_repetitions = "allow"
